# TUAV-OAN

C Files/midware/: CMakeLists.txt  package.xml
C Files/midware/src/: midware_node.cpp
C Files/move_about/: CMakeLists.txt
C Files/slam/: CMakeLists.txt  package.xml
Matlab Files/: COORD2IM.m  CORNERS2NODES.m  Eureca_plot.m  Experiment5_WIKIPEDIAHECK.m  bechmarking_hyper.m  benchmarking.m  changelog.txt  display_debug.m  display_engine_modded.m  dynamics.m  heck_yes_a_star.m  interactive.m  locate.m  main.m  map2mat.m  near_obstacles.m  nodes.m  normalize_heading.m  observed_set.m  reconstruct_path.m  sift.m  split_merge.m  stuck_check.m  stuck_check_advanced.m  variables.m
Matlab Files/FYP_Matlab_mass/: Control_Loop.slx  Experiment6.m  changelog.txt  concern.m  display_debug.m  display_engine.m  distance.m  dynamics.m  heading.m  heck_yes_a_star.m  interactive.m  locate.m  max_ARB.m  move.m  near_obstacles.m  nodes.m  observe.m  reconstruct_path.m  sift.m  split_merge.m  split_merge_fix.m  test.m  thesis_data.m  thesis_hyper.m  thesis_var.m  variables.m
Matlab Files/Failed Experiments/: Experiment3.m
Matlab Files/INTERIM DEMOS/: DEMO2.m  DEMO_VARS.m
Matlab Files/map_saves/: initial.mat  obstacle.mat  target.mat
Matlab Files/the_data/: anova_pearson.m  data_analysis.m  p_data.csv  plot_anova.m  plot_stuff.m  rho_data.csv
move_about/: package.xml
move_about/include/: move_lib.h
move_about/src/: move_lib.cpp  move_lib_base.cpp  move_lib_deprecate.cpp
oan/: CMakeLists.txt  package.xml
oan/include/: oan_lib.h
oan/src/: oan_lib.cpp  oan_lib_base.cpp  oan_lib_heading.cpp  oan_lib_map.cpp  oan_node.cpp
slam/: CMakeLists.txt
slam/include/: slam_lib.h
slam/src/: slam_lib.cpp  (+1 more)
(+51 files in other folders)
